fixed unvisible images

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,22 @@
 body {
-    font-size: 35px;
-    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 header {
-    background-color: lightblue;
-}
-
-nav {
     background-color: lightgray;
 }
 
+nav {
+    background-color: lightblue;
+}
+
 main {
-    background-color: antiquewhite;
+    background-color: yellow;
 }
 
 footer {
-    background-color: salmon;
+    background-color: lightgray;
 }
 
 li {
@@ -25,7 +25,7 @@ li {
 }
 
 h1 {
-    text-align: left;
+    text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: darkblue;
 }
